apply plugin: 'java'
apply plugin: 'application'

archivesBaseName = 'todo-backend'
version = '0.1.0-SNAPSHOT'

sourceCompatibility = 14
targetCompatibility = 14

repositories {
  mavenLocal()
  mavenCentral()
  maven {
    url = 'https://oss.sonatype.org/content/repositories/snapshots'
  }
}

tasks.withType(JavaCompile).each {
  it.options.compilerArgs.addAll('--enable-preview')
}

tasks.withType(Test).each {
  it.jvmArgs.addAll('--enable-preview')
}

test {
  useJUnitPlatform()
}

dependencies {
  implementation 'com.github.tonivade:purefun-monad:1.8'
  implementation 'com.github.tonivade:purefun-effect:1.8'
  implementation 'com.github.tonivade:purefun-instances:1.8'
  implementation 'com.github.tonivade:zeromock-server:0.13.0-SNAPSHOT'
  implementation 'com.github.tonivade:zeromock-pure:0.13.0-SNAPSHOT'
  implementation 'com.github.tonivade:puredbc:0.1.0-SNAPSHOT'
  implementation 'com.github.tonivade:purecfg:0.1.0-SNAPSHOT'
  implementation 'com.google.code.gson:gson:2.8.5'
  implementation 'com.zaxxer:HikariCP:3.4.2'
  implementation 'org.flywaydb:flyway-core:5.2.4'
  runtime 'com.h2database:h2:1.4.200'
  testImplementation 'com.github.tonivade:zeromock-junit5:0.13.0-SNAPSHOT'
  testImplementation 'org.junit.jupiter:junit-jupiter-engine:5.6.2'
  testImplementation 'org.junit.platform:junit-platform-runner:1.6.2'
  testImplementation 'org.mockito:mockito-core:3.3.3'
  testImplementation 'org.mockito:mockito-junit-jupiter:3.3.3'
}

application {
  mainClassName = 'com.github.tonivade.todo.Application'
}

task fatJar(type: Jar) {
  manifest {
    attributes "Main-Class": "com.github.tonivade.todo.Application"
  }
  archiveClassifier = "all"
  from {
    configurations.compile.collect { it.isDirectory() ? it : zipTree(it) }
    configurations.runtime.collect { it.isDirectory() ? it : zipTree(it) }
  }
  with jar
}
